cmake_minimum_required(VERSION 3.28)
project(Simple1 C)

set(CMAKE_C_STANDARD 11)

add_executable(Simple1
        main.c
        C_primer_plus/common.h
        C_primer_plus/chapter3.c
        C_primer_plus/chapter4.c
        C_primer_plus/chapter5.c
        C_primer_plus/chapter10.c
        C_primer_plus/chapter11.c
        C_primer_plus/chapter12.c
        C_primer_plus/chapter13.c
        C_primer_plus/chapter14.c
        C_primer_plus/chapter15.c
        C_primer_plus/chapter16.c
        C_primer_plus/chapter17.c

)
